# openscad

./: .gitmodules  CMakeLists.txt  howto_mac
.github/workflows/: linux.yml
doc/: compile_on
examples/: examples.json
examples/Python/: handles.py
lib/pylibfive/: pylibfive.py
libraries/pylibfive/: pylibfive.py
libraries/python/: openscad.pyi  pyjupyter.py  pyutil.py
resources/: common.qrc.in
resources/html/: AboutDialog.html  CuraInfo.html  LocalSlicerInfo.html
resources/icons/: icons-svg-default.scad
scripts/: create_appimage.sh  github-ci.sh  installer.nsi  libpython_patch.sh  mac-release  macosx-sanity-check.py  mingw-x-build-dependencies.sh  release-common.sh  uni-get-dependencies.sh
shaders/: Preview.frag  Preview.vert
src/: Feature.cc  Feature.h  RenderStatistic.cc  RenderStatistic.h  openscad.cc
src/core/: AST.cc  AST.h  Assignment.cc  Assignment.h  Builtins.cc  CSGNode.cc  CSGNode.h  CSGTreeEvaluator.cc  ColorNode.cc  ColorNode.h  Context.cc  ContextFrame.cc  ContextFrame.h  ContextMemoryManager.cc  CsgOpNode.cc  CsgOpNode.h  DebugNode.cc  DebugNode.h  Expression.cc  Expression.h  FilletNode.cc  FilletNode.h  FreetypeRenderer.cc  FrepNode.cc  FrepNode.h  ImportNode.cc  ImportNode.h  LinearExtrudeNode.cc  LinearExtrudeNode.h  LocalScope.cc  LocalScope.h  ModuleInstantiation.cc  ModuleInstantiation.h  (+39 more)
src/python/: CMakeLists.txt  FrepNode.cc  FrepNode.h  openscad_jupyter.cc  openscad_jupyter.h  pydata.cc  pydata.h  pyfunctions.cc  pylibfive.h  pymodule.cc  pyopenscad.cc  pyopenscad.h  python_public.h
tests/: CMakeLists.txt  wasm-check.html
(+114 files in other folders)
